#1131 Make components alpine-csp compatible (WIP)

--- a/Magento_Catalog/layout/catalog_category_view.xml
+++ b/Magento_Catalog/layout/catalog_category_view.xml
@@ -31,6 +31,8 @@
                 <block class="Magento\Catalog\Block\Product\ListProduct" name="category.products.list" as="product_list" template="Magento_Catalog::product/list.phtml">
                     <arguments>
                         <argument name="eager_load_images_count" xsi:type="number">3</argument>
+
+                        <argument name="hide_rating_summary" xsi:type="boolean">true</argument>
                     </arguments>
                     <block name="category.products.list.options" as="product_options"
                            template="Magento_Catalog::product/options/options.phtml">
