--- a/Magento_Catalog/templates/product/list/image.phtml
+++ b/Magento_Catalog/templates/product/list/image.phtml
@@ -8,18 +8,26 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\BlockJsDependencies;
+use Hyva\Theme\ViewModel\HyvaCsp;
 use Magento\Catalog\Block\Product\Image;
 use Magento\Framework\Escaper;
 
 /** @var Image $block */
 /** @var Escaper $escaper */
+/** @var HyvaCsp $hyvaCsp */
+/** @var ViewModelRegistry $viewModels */
+
+$pageJsRegistry = $viewModels->require(BlockJsDependencies::class);
+$pageJsRegistry->setBlockTemplateDependency($block, 'Magento_Catalog::product/list/js/image.phtml');
 
 $hasLoadingAttribute = ($block->getCustomAttributes() ?: [])['loading'] ?? false;
 
 ?>
 <img class="hover:shadow-sm object-contain <?= $escaper->escapeHtmlAttr($block->getClass()) ?>"
-     x-data=""
-     @update-gallery-<?= (int)$block->getProductId() ?>.window="$root.src = $event.detail"
+     x-data="initProductItemImage"
+     @update-gallery-<?= (int)$block->getProductId() ?>.window="updateImage"
     <?php foreach ($block->getCustomAttributes() as $name => $value): ?>
         <?= $escaper->escapeHtmlAttr($name) ?>="<?= $escaper->escapeHtmlAttr($value) ?>"
     <?php endforeach; ?>
