--- a/Magento_Catalog/templates/product/list/js/wishlist.phtml
+++ b/Magento_Catalog/templates/product/list/js/wishlist.phtml
@@ -70,6 +70,13 @@ $wishlistViewModel = $viewModels->require(Wishlist::class);
             }
         }
     }
+    (() => {
+        const initFn = () => Alpine.data('initWishlist', initWishlist);
+        window.Alpine
+            ? initFn()
+            : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
+
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
 <?php endif; ?>
