--- a/Magento_Catalog/templates/product/view/quantity.phtml
+++ b/Magento_Catalog/templates/product/view/quantity.phtml
@@ -71,7 +71,8 @@ $maxSalesQtyLength = ($maxSalesQty ? strlen((string) $maxSalesQty) : 4)
                 itemId: (new URLSearchParams(window.location.search)).get('id') || findPathParam('id'),
                 productId: '<?= (int)$product->getId() ?>',
                 <?php /* populate the qty when editing a product from the cart */ ?>
-                onGetCartData: function onGetCartData(data, $dispatch) {
+                onGetCartData: function onGetCartData() {
+                    const data = this.$event.detail.data;
                     const cart = data && data.data && data.data.cart;
                     if (this.itemId && cart && cart.items) {
                         const cartItem = cart.items.find((item) => {
@@ -79,7 +80,7 @@ $maxSalesQtyLength = ($maxSalesQty ? strlen((string) $maxSalesQty) : 4)
                         });
                         if (cartItem && cartItem.qty) {
                             this.qty = cartItem.qty;
-                            $dispatch('update-qty-' + this.productId, this.qty);
+                            this.$dispatch('update-qty-' + this.productId, this.qty);
                         }
                     }
                 }
@@ -98,7 +99,7 @@ $maxSalesQtyLength = ($maxSalesQty ? strlen((string) $maxSalesQty) : 4)
                     <?= $escaper->escapeHtml(__('Quantity')) ?>
                 </label>
                 <input name="qty"
-                    @private-content-loaded.window="onGetCartData($event.detail, $dispatch)"
+                    @private-content-loaded.window="onGetCartData"
                     id="qty[<?= (int)$product->getId() ?>]"
                     form="product_addtocart_form"
                     <?php if ($stockItemViewModel->isQtyDecimal($product)): ?>
