--- a/Magento_Directory/templates/currency.phtml
+++ b/Magento_Directory/templates/currency.phtml
@@ -94,7 +94,7 @@ $currencyViewModel = $viewModels->require(Currency::class);
                     return this.open ? 'true' : 'false';
                 },
                 switchCurrency() {
-                    hyva.postForm(this.$el.dataset['currency-data'])
+                    hyva.postForm(this.$el.dataset.currencyData)
                 }
             }
         }
