--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -116,6 +116,14 @@ $showMiniCart = $storeConfig->getStoreConfig(SidebarCart::XML_PATH_CHECKOUT_SIDE
             }
         }
     }
+
+    (() => {
+        const initFn = () => {
+            Alpine.data('initHeader', initHeader);
+            Alpine.data('initCompareHeader', initCompareHeader);
+        }
+        window.Alpine ? initFn() : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
 <div id="header"
